# opentelemetry-cpp-test

./: .gitignore  LICENSE.md  main.cpp  meson.build  requirements.txt
subprojects/: opentelemetry-cpp.wrap
